--- a/styles/index.css
+++ b/styles/index.css
@@ -35,11 +35,13 @@ body h1 > span {
 
 #menu-circle {
   border-color: #e85d0d !important;
-  position: absolute;
+  position: fixed;
   z-index: 100;
-  top: 3px;
-  left: 7px;
+  top: 15px;
+  left: 19px;
   border-width: 5px;
+  height: 75px;
+  width: 75px;
 }
 
 body input + label {
@@ -59,8 +61,8 @@ body input + label span {
   display: block;
   background: #e85d0d;
   transition: 0.5s;
-  width: 50px;
-  margin-bottom: 10px;
+  width: 45px;
+  margin-bottom: 8px;
 }
 body input + label span:first-child {
   top: 3px;
@@ -80,12 +82,14 @@ body input:checked + label span {
 body input:checked + label span:first-child {
   opacity: 1;
   transform: rotate(405deg);
-  left: 38px;
+  left: 40px;
+  top: 53px;
 }
 body input:checked + label span:last-child {
   opacity: 1;
   transform: rotate(-405deg);
-  left: 38px;
+  left: 40px;
+  top: 53px;
 }
 body input ~ nav {
   background: #0c233c;
@@ -103,7 +107,7 @@ body input ~ nav > ul {
   text-align: center;
   position: absolute;
   list-style-type: none;
-  top: 35%;
+  top: 15%;
   left: 20%;
   right: 20%;
 }
@@ -117,7 +121,7 @@ body input ~ nav > ul > li > a {
   text-decoration: none;
   text-transform: uppercase;
   display: block;
-  padding: 30px;
+  padding: 20px;
   font-family: acumin-pro-extra-condensed, sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -354,17 +358,21 @@ h2,h3,h4 {
     height: 450px;
   }
 
+  header p {
+    display: none;
+  }
+
   #menu-circle {
     display: none;;
   }
 
-  body input + label {
+  /* body input + label {
     right: 50px;
     left: unset;
-  }
+  } */
 
   #logo {
-    top:30px;
+    top:75px;
   }
 
   .flex-grid {
