--- a/styles/index.css
+++ b/styles/index.css
@@ -344,9 +344,70 @@ h2,h3,h4 {
   margin-right: 25px;
 }
 
+.left-box {
+  background-image:  url("../img/right-curve.png"), url("../img/placeholder.png");
+  background-repeat: no-repeat, no-repeat;
+  background-position: center center, right center;
+  background-size: contain, cover;
+  height: 400px;
+  padding-top: 0px;
+}
+
+.left-box div {
+  background-color: #0c233c !important;
+  height: 100%;
+  margin-left: 53%;
+}
+
+.right-box {
+  background-image:  url("../img/left-curve.png"), url("../img/placeholder.png");
+  background-repeat: no-repeat, no-repeat;
+  background-position: center center, right center;
+  background-size: contain, cover;
+  height: 400px;
+  padding-top: 0px;
+}
+
+.right-box div {
+  background-color: #0c233c !important;
+  height: 100%;
+  margin-right: 53%;
+}
 
 
 /* MEDIA QUERIES */
+
+@media (max-width: 1060px) {
+  .left-box {
+    background-image:  url("../img/placeholder.png");
+    background-repeat: no-repeat
+    background-position:  right center;
+    background-size: cover;
+    height: 400px;
+    padding-top: 0px;
+  }
+  
+  .left-box div {
+    background-color: #0c233c !important;
+    height: 100%;
+    margin-left: 40%;
+  }
+  
+  .right-box {
+    background-image:  url("../img/placeholder.png");
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: cover;
+    height: 400px;
+    padding-top: 0px;
+  }
+  
+  .right-box div {
+    background-color: #0c233c !important;
+    height: 100%;
+    margin-right: 40%;
+  }
+}
 
 @media (max-width: 800px) {
   header {
